--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,22 +1,28 @@
 /* LOGO */
 div.logo {
-  width: 40vw;
+  width: 28vw;
   min-width: 350px;
   text-align: center;
   margin-bottom: 12px;
   background-color: rgb(255, 0, 0);
   color: lightsteelblue;
-  border-radius: 12px 0 12px 0;
+  border-radius: 12px 12px 12px 12px;
+  padding: 0 57.5vh 0 0;
+  
 }
 div.logo span {
   font-family: "Lobster", cursive;
   font-size: 200%;
   letter-spacing: 0.4rem;
+  
 }
 
-div img.logoimg {
-  width: 50%;
-}
+/* div img.logoimg {
+  width: 100%;
+ 
+  
+  
+} */
 
 /* HEADER */
 
@@ -67,6 +73,14 @@ article#pratos p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0 0 0 0;
 }
+.sobrenos01{
+  display:  grid;
+  grid-template-columns: 50% 50%;
+}
+.logoimg{
+  display: grid;
+  grid-template-columns: 50% 50% 50% 50%;
+}
 
 /* TAGS */
 h2 {
@@ -108,8 +122,8 @@ div.navpos {
   width: 120px;
   height: 120px;
   position: fixed;
-  bottom: 50vh;
-  left: 199.5vh;
+  bottom: 50%;
+  left: 89.7%;
   border-radius: 12px 0px 0px 12px;
   
 }
